<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="app_name">box</string>
    <string name="not_yet_implemented_info">Not yet implemented</string>
    <string name="button_cancel">Cancel</string>


    <!-- Main activity -->
    <string name="main_nav_header_title">Box app</string>
    <string name="main_nav_drawer_open_desc">Open navigation drawer</string>
    <string name="main_nav_drawer_close_desc">Close navigation drawer</string>


    <!-- Biometric Prompt Fragment -->
    <string name="biometric_nav_item_title">Biometric</string>
    <string name="biometric_screen_title">@string/biometric_nav_item_title</string>
    <string name="biometric_transaction_info">You have very important transaction that needs to be confirmed with fingerprint</string>
    <string name="biometric_new_biometric_prompt">Use new biometric prompt</string>
    <string name="biometric_old_fingerprint_dialog">Use old fashioned fingerprint dialog</string>
    <string name="biometric_transaction_confirmed">Transaction confirmed</string>
    <string name="biometric_new_transaction_button">New transaction</string>
    <string name="biometric_add_fingerprint_info">In order to confirm transaction with fingerprint you need to add your fingerprint in settings</string>
    <string name="biometric_add_fingerprint_button">Add fingerprint</string>
    <string name="biometric_fingerprint_not_supported_info">Fingerprint is not supported on this device</string>
    <string name="biometric_error_msg">Error occurred</string>
    <string name="biometric_not_supported_msg">Biometric prompt is not supported on this device</string>
    <string name="biometric_transaction_title">Title</string>
    <string name="biometric_transaction_subtitle">Subtitle</string>
    <string name="biometric_transaction_description">Description</string>


    <!-- Old Fingerprint dialog -->
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>


    <!-- Image decoder -->
    <string name="image_decoder_nav_item_title">Image decoder</string>
    <string name="image_decoder_screen_title">@string/image_decoder_nav_item_title</string>
    <string name="image_decoder_cat_jpg_checkbox">Use old BitmapFactory</string>
    <string name="image_decoder_cat_jpg_button">Cat JPG</string>
    <string name="image_decoder_cat_webp_button">Cat WEBP</string>
    <string name="image_decoder_cat_gif_button">Cat GIF</string>
    <string name="image_decoder_drawable_button">Drawable</string>
    <string name="image_decoder_vector_drawable_button">Vector Drawable</string>
    <string name="image_decoder_original_button">Original</string>
    <string name="image_decoder_resized_button">Resized</string>
    <string name="image_decoder_cropped_button">Cropped</string>
    <string name="image_decoder_post_processed_button">Round corners</string>


    <!-- Precomputed text -->
    <string name="precomputed_text_nav_item_title">Precomputed text</string>
    <string name="precomputed_text_screen_title">@string/precomputed_text_nav_item_title</string>
    <string name="precomputed_text_clear_text_button">Clear text</string>
    <string name="precomputed_text_show_text_button">Display long text</string>
    <string name="precomputed_text_show_precomputed_text_button">Display long precomputed text</string>
    <string name="precomputed_text_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec accumsan lectus. Nunc vitae erat quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec malesuada erat in consectetur dignissim. Etiam dictum urna nisl, sit amet interdum ipsum vehicula congue. Donec lacinia blandit lectus in dapibus. Sed at pretium quam, quis maximus est. Maecenas lorem felis, tincidunt at vestibulum in, condimentum id nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam egestas, odio eu malesuada rutrum, nunc nibh tristique massa, vitae finibus massa quam eget nisl. Mauris lobortis eget justo ut tincidunt.
        Sed mi neque, tempor vel condimentum et, eleifend id odio. Aenean accumsan nunc non turpis tristique hendrerit. Curabitur a fermentum neque. Duis venenatis auctor metus vitae laoreet. Aenean ultricies purus id est mattis, nec commodo orci lobortis. Sed ante augue, porta tristique purus at, malesuada placerat tellus. Maecenas euismod viverra justo. Nunc tempor leo in nulla euismod, sit amet accumsan turpis molestie. Duis non quam erat. Proin sit amet eleifend nisl. Cras eros elit, laoreet nec mattis sit amet, tincidunt vitae nisi. Cras eget tristique massa. Proin vel purus pharetra, pulvinar velit quis, lacinia erat. Fusce vitae varius lectus. Phasellus scelerisque urna facilisis quam pharetra congue.
        Nullam facilisis sem orci, tempor rutrum est dictum ac. Donec pharetra id nulla ut lacinia. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque mattis non leo quis condimentum. Vestibulum maximus varius faucibus. Integer ut tortor et ligula imperdiet eleifend at non erat. Mauris lorem dolor, tincidunt in fringilla eu, commodo non velit. Nam ultricies nunc at augue rutrum maximus. Integer at lectus nulla. Quisque ut nisi lacus. Vivamus at diam nibh.
        Etiam lectus urna, molestie interdum tortor ut, mattis efficitur nibh. Sed gravida, dolor ut porttitor tempus, lacus lectus efficitur arcu, vel ultricies leo nunc sit amet velit. Duis nisi augue, placerat venenatis feugiat non, suscipit vel lacus. Vivamus blandit turpis justo, quis lobortis odio malesuada et. Maecenas a ipsum vitae libero vulputate bibendum sit amet eu tortor. Sed porta, felis sagittis aliquet pretium, ligula enim viverra justo, consectetur hendrerit ex massa eu tellus. Aliquam imperdiet posuere nunc non ullamcorper. Mauris dignissim augue purus, a pulvinar sapien suscipit eu. Aenean pharetra lectus ut arcu rutrum lobortis. Quisque laoreet, lacus sed tincidunt placerat, nisi nibh vehicula massa, quis finibus enim enim a mauris. Aliquam erat volutpat. Etiam ac massa elementum diam venenatis cursus. Quisque fringilla, tortor id vulputate congue, ante felis congue tortor, eu semper neque lectus id lorem.
        Vivamus sit amet elementum libero. Maecenas consequat id elit ac dictum. Pellentesque urna mi, vulputate sed ullamcorper nec, pharetra et mi. Vivamus congue est erat, ut tincidunt tellus varius eu. Nunc tincidunt pulvinar rutrum. Nulla et nunc tempor, ullamcorper risus nec, volutpat leo. Phasellus vel mauris sed mi faucibus consequat non quis mi. Etiam quam velit, porttitor sed purus sit amet, malesuada vehicula velit. Nunc id dolor vel ipsum pulvinar ornare rutrum nec nunc. Nam at neque viverra, finibus nibh quis, auctor elit.
    </string>


    <!-- Precomputed text recycler -->
    <string name="precomputed_text_recycler_nav_item_title">Precomputed text recycler</string>
    <string name="precomputed_text_recycler_screen_title">@string/precomputed_text_recycler_nav_item_title</string>
    <string name="precomputed_text_recycler_check_box">Use precomputed text</string>


    <!-- Magnifier -->
    <string name="magnifier_nav_item_title">Magnifier</string>
    <string name="magnifier_screen_title">@string/magnifier_nav_item_title</string>
    <string name="magnifier_display_magnifier_check_box">Display magnifier on touch</string>
    <string name="magnifier_text_to_magnify">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec accumsan lectus. Nunc vitae erat quam.
        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
        Donec malesuada erat in consectetur dignissim. Etiam dictum urna nisl, sit amet interdum ipsum vehicula congue.
    </string>
</resources>
