<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/catJpgCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/image_decoder_cat_jpg_checkbox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/catJpgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/image_decoder_cat_jpg_button"/>

            <RadioButton
                android:id="@+id/catWebpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_decoder_cat_webp_button"/>

            <RadioButton
                android:id="@+id/catGifButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_decoder_cat_gif_button"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/originalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/image_decoder_original_button"/>

            <RadioButton
                android:id="@+id/croppedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_decoder_cropped_button"/>

            <RadioButton
                android:id="@+id/resizedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_decoder_resized_button"/>

            <RadioButton
                android:id="@+id/postProcessedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_decoder_post_processed_button"/>
        </RadioGroup>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>
</LinearLayout>