<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precomputed_text_show_text_button"/>

            <Button
                android:id="@+id/clearTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precomputed_text_clear_text_button"/>
        </LinearLayout>

        <TextView
            android:id="@+id/longText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showPrecomputedTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precomputed_text_show_precomputed_text_button"/>

            <Button
                android:id="@+id/clearPrecomputedTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precomputed_text_clear_text_button"/>
        </LinearLayout>

        <TextView
            android:id="@+id/longPrecomputedText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </LinearLayout>

</LinearLayout>